AMP-17605. Fix alignment. Move to styles
git-svn-id: file:///svn/branches/AMP_2_10_RELEASE@23552 9e8d75aa-d0cb-44a9-8341-a4b8ba1a38b4

--- a/amp/TEMPLATE/ampTemplate/css_2/amp.css
+++ b/amp/TEMPLATE/ampTemplate/css_2/amp.css
@@ -174,6 +174,9 @@ html.chrome .bd_drop{margin-top:15px;}
 .right_menu_box_big {border-left:1px solid #D0D0D0; border-right:1px solid #D0D0D0; border-bottom:1px solid #D0D0D0; width:218px; }
 /*--rafy--*/
 .right_menu_cont {padding:10px; font-size:11px;word-wrap:break-word;}
+.right_menu_cont ul {margin:0px;padding:0px;}
+.right_menu_cont select,input {width: 95px;}
+
 .search_label {font-size:10px; color:#7F7F7F;}
 .tbl_spacing {padding-bottom:5px;}
 .tri {background-image:url(/TEMPLATE/ampTemplate/img_2/ico_tri.gif); background-repeat: no-repeat; list-style-position:inside; list-style:none; display:block; font-size:11px; padding-bottom:1px; padding-left:7px; background-position: 4px -1px;}
@@ -713,7 +716,7 @@ html.ie ul.first-of-type {z-index:9999;width:1000px;}
 html.ie ul.first-of-type .bd {position:relative;width:auto;}
 html.ie ul.yui-nav{z-index:10;}
 html.ie div.header{z-index:9999;}
-.right_menu_cont ul{margin:0px;padding:0px;}
+
 .contentstyle {height:637px;}
 
 #previewHeaderSectionDiv {background-color:#F5F5F5; text-align:center; padding-top:5px; padding-bottom:5px; border-top:1px solid #E9E9E9; border-bottom:1px solid #E9E9E9; font-size:11px; font-weight:bold; color:#5C5C5C;}
